created full web

--- a/assets/templates/aboutus.html
+++ b/assets/templates/aboutus.html
@@ -64,20 +64,26 @@
             <div class="overlap-5">
               <div class="rectangle-9"></div>
               <div class="text-wrapper-12">VilleGo</div>
-              <div class="text-wrapper-13">ბლოგი</div>
-              <div class="text-wrapper-14">ფერმერები</div>
-              <div class="text-wrapper-15">ჩვენს შესახებ</div>
-              <div class="text-wrapper-16">კონტაქტი</div>
+              <a class="text-wrapper-13" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-14" href="../templates/farmers.html">ფერმერები</a>
+              <a class="text-wrapper-15" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-16" href="aboutus.html">კონტაქტი</a>
               <div class="rectangle-10"></div>
               <img class="vector-3" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-7.svg" />
               <div class="text-wrapper-17">ძებნა</div>
-              <div class="text-wrapper-18">რუკა</div>
-              <img class="image-2" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/-------.png" />
-              <img class="vector-4" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-8.svg" />
-              <img class="vector-5" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-3.svg" />
-              <img class="vector-6" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-5.svg" />
-              <img class="plus-circle" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/plus-circle---1441-.svg" />
-              <img class="ellipse" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/ellipse-3981.png" />
+              <a class="text-wrapper-18" href="../templates/map.html">რუკა</a>"></a>
+              <a class="image-2" href="../templates/mapfilters.html">
+              <img  src="https://c.animaapp.com/mfi5pky9FLhdo1/img/-------.png" width="55px" height="55px" /></a>
+              <a class="vector-4" href="../templates/favorites.html">
+              <img  src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-8.svg" width="22px" height="22px" /></a>
+              <a class="vector-5" href="../templates/cart.html">
+              <img  src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-3.svg" width="22px" height="22px" /></a>
+              <a class="vector-6" href="../templates/messages.html">
+              <img  src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-5.svg" width="22px" height="22px" /></a>
+             <a class="plus-circle" href="../templates/addstatement.html">
+              <img src="https://c.animaapp.com/mfi5pky9FLhdo1/img/plus-circle---1441-.svg" width="22px" height="22px" /></a>
+              <a class="ellipse" href="../templates/personalpage.html">
+              <img  src="https://c.animaapp.com/mfi5pky9FLhdo1/img/ellipse-3981.png" width="22px" height="22px" /></a>
             </div>
             <img class="group-2" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/group-1859.png" />
           </div>
@@ -124,15 +130,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/profile.png" />
-            <div class="text-wrapper-21">დახმარება</div>
+            <a class="text-wrapper-21" href="../templates/help.html">დახმარება</a>
             <div class="text-wrapper-22">ხშირად დასმული კითხვები</div>
             <div class="text-wrapper-23">ანონიმური უკუკავშირი</div>
             <div class="text-wrapper-24">ინფორმაცია</div>
             <div class="text-wrapper-25">გაყიდვის პირობები</div>
             <div class="text-wrapper-26">წესები და პირობები</div>
-            <div class="text-wrapper-27">მომხმარებელი</div>
-            <div class="text-wrapper-28">რეგისტრაცია</div>
-            <div class="text-wrapper-29">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-27" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-28" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-29" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-20">VilleGo</span>
               <span class="text-wrapper-30">&nbsp;</span>
@@ -161,12 +167,12 @@
             </p>
             <div class="text-wrapper-39">საქართველო</div>
           </div>
-          <div class="text-wrapper-40">დახმარების გვერდი</div>
-          <div class="text-wrapper-41">ჩვენს შესახებ</div>
+          <a class="text-wrapper-40" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-41" href="../templates/aboutus.html">ჩვენს შესახებ</a>
           <div class="text-wrapper-42">დაბრუნების პოლიტიკა</div>
           <div class="text-wrapper-43">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-44">ფავორიტები</div>
-          <div class="text-wrapper-45">კალათა</div>
+          <a  class="text-wrapper-44" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-45" href="../templates/cart.html">კალათა</a>
           <img class="vector-8" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/vector-2.svg" />
           <img class="d" src="https://c.animaapp.com/mfi5pky9FLhdo1/img/d.svg" />
           <div class="img-wrapper">
