--- a/assets/templates/addstatement.html
+++ b/assets/templates/addstatement.html
@@ -118,20 +118,26 @@
             <div class="overlap-24">
               <div class="rectangle-2"></div>
               <div class="text-wrapper-9">VilleGo</div>
-              <div class="text-wrapper-10">ბლოგი</div>
-              <div class="text-wrapper-11">ფერმერები</div>
-              <div class="text-wrapper-12">ჩვენს შესახებ</div>
-              <div class="text-wrapper-13">კონტაქტი</div>
+              <a class="text-wrapper-10" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-11" href="../templates/farmers.html">ფერმერები</a>
+              <a class="text-wrapper-12" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-13" href="../templates/aboutus.html">კონტაქტი</a>
               <div class="rectangle-3"></div>
               <img class="vector-4" src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-24.svg" />
               <div class="text-wrapper-14">ძებნა</div>
-              <div class="text-wrapper-15">რუკა</div>
-              <img class="image" src="https://c.animaapp.com/mfi64cykTfkHks/img/-------.png" />
-              <img class="vector-5" src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-22.svg" />
-              <img class="vector-6" src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-12.svg" />
-              <img class="vector-7" src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-17.svg" />
-              <img class="plus-circle" src="https://c.animaapp.com/mfi64cykTfkHks/img/plus-circle---1441-.svg" />
-              <img class="ellipse" src="https://c.animaapp.com/mfi64cykTfkHks/img/ellipse-3981.png" />
+              <a class="text-wrapper-15" href="../templates/map.html">რუკა</a>
+              <a class="image" href="../templates/mapfilters.html">
+              <img  src="https://c.animaapp.com/mfi64cykTfkHks/img/-------.png" width="60px" height="60px" /> </a>
+              <a class="vector-5" href="../templates/favorites.html">
+              <img src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-22.svg" width="22px" height="22px" /></a>
+              <a class="vector-6" href="../templates/cart.html">
+              <img  src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-12.svg" width="22px" height="22px" /></a>
+              <a class="vector-7" href="../templates/messages.html">
+              <img  src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-17.svg" width="22px" height="22px"  /></a>
+              <a class="plus-circle" href="../templates/addstatement.html">
+              <img  src="https://c.animaapp.com/mfi64cykTfkHks/img/plus-circle---1441-.svg" width="22px" height="22px"  /></a>
+              <a class="ellipse" href="../templates/personalpage.html">
+              <img class="ellipse" src="https://c.animaapp.com/mfi64cykTfkHks/img/ellipse-3981.png" width="22px" height="22px"  /></a>
             </div>
             <img class="group" src="https://c.animaapp.com/mfi64cykTfkHks/img/group-1859.png" />
           </div>
@@ -178,15 +184,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi64cykTfkHks/img/profile.png" />
-            <div class="text-wrapper-17">დახმარება</div>
-            <div class="text-wrapper-18">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-19">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-20">ინფორმაცია</div>
-            <div class="text-wrapper-21">გაყიდვის პირობები</div>
-            <div class="text-wrapper-22">წესები და პირობები</div>
-            <div class="text-wrapper-23">მომხმარებელი</div>
-            <div class="text-wrapper-24">რეგისტრაცია</div>
-            <div class="text-wrapper-25">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-17" href="../templates/help.html">დახმარება</a>
+            <a class="text-wrapper-18" href="../templates/help.html">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-19" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-20" href="../templates/help.html">ინფორმაცია</a>
+            <a class="text-wrapper-21" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-22" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-23" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-24" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-25" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-16">VilleGo</span>
               <span class="text-wrapper-26">&nbsp;</span>
@@ -215,12 +221,12 @@
             </p>
             <div class="text-wrapper-35">საქართველო</div>
           </div>
-          <div class="text-wrapper-36">დახმარების გვერდი</div>
-          <div class="text-wrapper-37">ჩვენს შესახებ</div>
-          <div class="text-wrapper-38">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-39">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-40">ფავორიტები</div>
-          <div class="text-wrapper-41">კალათა</div>
+          <a class="text-wrapper-36" href="../templates/help.html" >დახმარების გვერდი</da>
+          <a class="text-wrapper-37" href="../templates/aboutus.html" >ჩვენს შესახებ</da>
+          <a class="text-wrapper-38" href="../templates/" >დაბრუნების პოლიტიკა</da>
+          <a class="text-wrapper-39" href="../templates/" >კონფიდენციალურობის პოლიტიკა</da>
+          <a class="text-wrapper-40" href="../templates/favorites.html" >ფავორიტები</da>
+          <a class="text-wrapper-41" href="../templates/cart.html" >კალათა</a>
           <img class="vector-9" src="https://c.animaapp.com/mfi64cykTfkHks/img/vector-29.svg" />
           <img class="d" src="https://c.animaapp.com/mfi64cykTfkHks/img/d.svg" />
           <div class="group-7">
