--- a/assets/templates/blog.html
+++ b/assets/templates/blog.html
@@ -75,20 +75,26 @@
             <div class="overlap-group-2">
               <div class="rectangle-6"></div>
               <div class="text-wrapper-11">VilleGo</div>
-              <div class="text-wrapper-12">ბლოგი</div>
-              <div class="text-wrapper-13">ფერმერები</div>
-              <div class="text-wrapper-14">ჩვენს შესახებ</div>
-              <div class="text-wrapper-15">კონტაქტი</div>
+              <a class="text-wrapper-12" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-13" href="../templates/farmer.html">ფერმერები</a>
+              <a class="text-wrapper-14" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-15" href="../templates/aboutus.html">კონტაქტი</a>
               <div class="rectangle-7"></div>
               <img class="vector-3" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-1.svg" />
               <div class="text-wrapper-16">ძებნა</div>
-              <div class="text-wrapper-17">რუკა</div>
-              <img class="image" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/-------.png" />
-              <img class="vector-4" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-4.svg" />
-              <img class="vector-5" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-7.svg" />
-              <img class="vector-6" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-6.svg" />
-              <img class="plus-circle" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/plus-circle---1441-.svg" />
-              <img class="ellipse" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/ellipse-3981.png" />
+              <a class="text-wrapper-17" href="../templates/map.html">რუკა</a>
+              <a class="image" href="../templates/mapfilters.html">
+              <img src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/-------.png" width="55px" height="55px" /></a>
+              <a class="vector-4" href="../templates/favorites.html">
+              <img  src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-4.svg" width="22px" height="22px" /></a>
+              <a class="vector-5" href="../templates/cart.html">
+              <img  src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-7.svg" width="22px" height="22px" /></a>
+              <a class="vector-6" href="../templates/messages.html">
+              <img  src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-6.svg" width="22px" height="22px" /></a>
+              <a class="plus-circle" href="../templates/addstatement.html">
+              <img  src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/plus-circle---1441-.svg"  width="22px" height="22px"/></a>
+              <a class="ellipse" href="../templates/personalpage.html">
+              <img  src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/ellipse-3981.png" width="22px" height="22px" /></a>
             </div>
             <img class="group-2" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/group-1859.png" />
           </div>
@@ -135,15 +141,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/profile.png" />
-            <div class="text-wrapper-19">დახმარება</div>
-            <div class="text-wrapper-20">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-21">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-22">ინფორმაცია</div>
-            <div class="text-wrapper-23">გაყიდვის პირობები</div>
-            <div class="text-wrapper-24">წესები და პირობები</div>
-            <div class="text-wrapper-25">მომხმარებელი</div>
-            <div class="text-wrapper-26">რეგისტრაცია</div>
-            <div class="text-wrapper-27">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-19" href="../templates/help.html">დახმარება</a>
+            <a class="text-wrapper-20" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-21" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-22" href="../templates/">ინფორმაცია</a>
+            <a class="text-wrapper-23" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-24" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-25" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-26" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-27" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-18">VilleGo</span>
               <span class="text-wrapper-28">&nbsp;</span>
@@ -172,15 +178,15 @@
             </p>
             <div class="text-wrapper-37">საქართველო</div>
           </div>
-          <div class="text-wrapper-38">დახმარების გვერდი</div>
-          <div class="text-wrapper-39">ჩვენს შესახებ</div>
-          <div class="text-wrapper-40">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-41">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-42">ფავორიტები</div>
-          <div class="text-wrapper-43">კალათა</div>
+          <a class="text-wrapper-38" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-39" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+          <a class="text-wrapper-40" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-41" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-42" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-43" href="../templates/cart.html">კალათა</a>
           <img class="vector-8" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-5.svg" />
           <img class="d" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/d.svg" />
-          <div class="img-wrapper">
+          <a class="img-wrapper">
             <img class="vector-9" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/vector-8.svg" />
           </div>
           <img class="image-3" src="https://c.animaapp.com/mfi6j6lpbYnIeo/img/------.png" />
