--- a/assets/templates/cart.html
+++ b/assets/templates/cart.html
@@ -116,20 +116,26 @@
             <div class="overlap-12">
               <div class="rectangle-8"></div>
               <div class="text-wrapper-24">VilleGo</div>
-              <div class="text-wrapper-25">ბლოგი</div>
-              <div class="text-wrapper-26">ფერმერები</div>
-              <div class="text-wrapper-27">ჩვენს შესახებ</div>
-              <div class="text-wrapper-28">კონტაქტი</div>
+              <a class="text-wrapper-25" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-26" href="../templates/farmers.html">ფერმერები</a>
+              <a class="text-wrapper-27" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-28" href="../templates/aboutus.html">კონტაქტი</a>
               <div class="rectangle-9"></div>
               <img class="vector" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-3.svg" />
               <input type="text" class="search-input" placeholder="ძებნა" id="search-input" />
-              <div class="text-wrapper-30">რუკა</div>
-              <img class="image" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/-------.png" />
-              <img class="vector-2" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-2.svg" />
-              <img class="vector-3" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-6.svg" />
-              <img class="vector-4" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-4.svg" />
-              <img class="plus-circle" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/plus-circle---1441-.svg" />
-              <img class="ellipse" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/ellipse-3981.png" />
+              <a class="text-wrapper-30" href="../templates/map.html">რუკა</a>
+              <a class="image" href="../templates/mapfilters.html">
+              <img src="https://c.animaapp.com/mfi86cnp1nfUpE/img/-------.png" width="55px" height="55px"/></a>
+              <a class="vector-2" href="../templates/favorites.html">
+              <img  src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-2.svg" width="22px" height="22px"/></a>
+              <a class="vector-3" href="../templates/cart.html">
+              <img  src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-6.svg" width="22px" height="22px"/></a>
+              <a class="vector-4" href="../templates/messages.html">
+              <img  src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector-4.svg" width="22px" height="22px"/></a>
+              <a class="plus-circle" href="../templates/addstatement.html">
+              <img cla src="https://c.animaapp.com/mfi86cnp1nfUpE/img/plus-circle---1441-.svg" width="22px" height="22px"/></a>
+              <a class="ellipse" href="../templates/personalpage.html">
+              <img src="https://c.animaapp.com/mfi86cnp1nfUpE/img/ellipse-3981.png" width="22px" height="22px"/></a>
             </div>
             <img class="group-5" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/group-1859.png" />
           </div>
@@ -176,15 +182,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/profile.png" />
-            <div class="text-wrapper-33">დახმარება</div>
-            <div class="text-wrapper-34">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-35">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-36">ინფორმაცია</div>
-            <div class="text-wrapper-37">გაყიდვის პირობები</div>
-            <div class="text-wrapper-38">წესები და პირობები</div>
-            <div class="text-wrapper-39">მომხმარებელი</div>
-            <div class="text-wrapper-40">რეგისტრაცია</div>
-            <div class="text-wrapper-41">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-33" href="../templates/help.html">დახმარება<a>
+            <a class="text-wrapper-34" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-35" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-36" href="../templates/">ინფორმაცია</a>
+            <a class="text-wrapper-37" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-38" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-39" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-40" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-41" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-32">VilleGo</span>
               <span class="text-wrapper-42">&nbsp;</span>
@@ -213,12 +219,12 @@
             </p>
             <div class="text-wrapper-51">საქართველო</div>
           </div>
-          <div class="text-wrapper-52">დახმარების გვერდი</div>
-          <div class="text-wrapper-53">ჩვენს შესახებ</div>
-          <div class="text-wrapper-54">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-55">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-56">ფავორიტები</div>
-          <div class="text-wrapper-57">კალათა</div>
+          <a class="text-wrapper-52" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-53" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+          <a class="text-wrapper-54" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-55" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-56" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-57" href="../templates/cart.html">კალათა</a>
           <img class="vector-6" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/vector.svg" />
           <img class="d" src="https://c.animaapp.com/mfi86cnp1nfUpE/img/d.svg" />
           <div class="vector-wrapper">
