--- a/assets/templates/completemap.html
+++ b/assets/templates/completemap.html
@@ -25,21 +25,27 @@
               <div class="overlap-2">
                 <div class="rectangle"></div>
                 <div class="text-wrapper-2">VilleGo</div>
-                <div class="text-wrapper-3 nav-item" data-page="blog">ბლოგი</div>
-                <div class="text-wrapper-4 nav-item" data-page="farmers">ფერმერები</div>
-                <div class="text-wrapper-5 nav-item" data-page="about">ჩვენს შესახებ</div>
-                <div class="text-wrapper-6 nav-item" data-page="contact">კონტაქტი</div>
+                <a class="text-wrapper-3 nav-item" href="../templates/blog.html" data-page="blog">ბლოგი</a>
+                <a class="text-wrapper-4 nav-item" href="../templates/farmers.html" data-page="farmers">ფერმერები</a>
+                <a class="text-wrapper-5 nav-item" href="../templates/aboutus.html" data-page="about">ჩვენს შესახებ</a>
+                <a class="text-wrapper-6 nav-item" href="../templates/aboutus.html" data-page="contact">კონტაქტი</a>
                 <div class="rectangle-2">
                   <input type="text" class="search-input" placeholder="ძებნა..." />
                 </div>
                 <img class="vector search-icon" src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector.svg" />
-                <div class="text-wrapper-8 nav-item" data-page="map">რუკა</div>
-                <img class="img logo" src="https://c.animaapp.com/mfi953ezC2KmOl/img/-------.png" />
-                <img class="vector-2 social-icon" src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector-3.svg" />
-                <img class="vector-3 social-icon" src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector-2.svg" />
-                <img class="vector-4 social-icon" src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector-1.svg" />
-                <img class="plus-circle add-btn" src="https://c.animaapp.com/mfi953ezC2KmOl/img/plus-circle---1441-.svg" />
-                <img class="ellipse profile-btn" src="https://c.animaapp.com/mfi953ezC2KmOl/img/ellipse-3981.png" />
+                <a class="text-wrapper-8 nav-item" data-page="map">რუკა</div>
+                <a class="img logo" href="../templates/completemap.html">
+                <img  src="https://c.animaapp.com/mfi953ezC2KmOl/img/-------.png" width="22px" height="22px" /></a>
+                <a class="vector-2 social-icon" href="../templates/favorites.html">
+                <img  src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector-3.svg" width="22px" height="22px" /></a>
+                <a class="vector-3 social-icon" href="../templates/cart.html">
+                <img  src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector-2.svg" width="22px" height="22px" /></a>
+                <a class="vector-4 social-icon" href="../templates/messages.html">
+                <img  src="https://c.animaapp.com/mfi953ezC2KmOl/img/vector-1.svg" width="22px" height="22px" /></a>
+                <a class="plus-circle add-btn" href="../templates/addstatement.html">
+                <img src="https://c.animaapp.com/mfi953ezC2KmOl/img/plus-circle---1441-.svg"  width="22px" height="22px"/></a>
+                <a class="ellipse profile-btn" href="../templates/personalpage.html">
+                <img src="https://c.animaapp.com/mfi953ezC2KmOl/img/ellipse-3981.png"  width="22px" height="22px"/></a>
               </div>
               <img class="group" src="https://c.animaapp.com/mfi953ezC2KmOl/img/group-1859.png" />
             </div>
