--- a/assets/templates/farmer.html
+++ b/assets/templates/farmer.html
@@ -300,16 +300,16 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi79y0gsd5KQQ/img/profile.png" />
-            <div class="text-wrapper-54">დახმარება</div>
-            <div class="text-wrapper-55">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-56">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-57">ინფორმაცია</div>
-            <div class="text-wrapper-58">გაყიდვის პირობები</div>
-            <div class="text-wrapper-59">წესები და პირობები</div>
-            <div class="text-wrapper-60">მომხმარებელი</div>
-            <div class="text-wrapper-61">რეგისტრაცია</div>
-            <div class="text-wrapper-62">მომხმარებლის გვერდი</div>
-            <p class="ville-go-2">
+            <a class="text-wrapper-54" href="../templates/">დახმარება</a>
+            <a class="text-wrapper-55" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-56" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-57" href="../templates/">ინფორმაცია</a>
+            <a class="text-wrapper-58" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-59" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-60" href="../templates/">მომხმარებელი</a>
+            <a class="text-wrapper-61" href="../templates/">რეგისტრაცია</a>
+            <a class="text-wrapper-62" href="../templates/">მომხმარებლის გვერდი</a>
+            <p class="ville-go-2
               <span class="text-wrapper-53">VilleGo</span>
               <span class="text-wrapper-63">&nbsp;</span>
               <span class="text-wrapper-64">ფერმერიდან მომხმარებლამდე, შუამავალის გარეშე!</span>
@@ -337,12 +337,12 @@
             </p>
             <div class="text-wrapper-72">საქართველო</div>
           </div>
-          <div class="text-wrapper-73">დახმარების გვერდი</div>
-          <div class="text-wrapper-74">ჩვენს შესახებ</div>
-          <div class="text-wrapper-75">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-76">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-77">ფავორიტები</div>
-          <div class="text-wrapper-78">კალათა</div>
+          <a class="text-wrapper-73" href="../templates/">დახმარების გვერდი</a>
+          <a class="text-wrapper-74" href="../templates/">ჩვენს შესახებ</a>
+          <a class="text-wrapper-75" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-76" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-77" href="../templates/">ფავორიტები</a>
+          <a class="text-wrapper-78" href="../templates/">კალათა</a>
           <img class="vector-27" src="https://c.animaapp.com/mfi79y0gsd5KQQ/img/vector-32.svg" />
           <img class="d" src="https://c.animaapp.com/mfi79y0gsd5KQQ/img/d.svg" />
           <div class="group-12">
