--- a/assets/templates/farmerexample.html
+++ b/assets/templates/farmerexample.html
@@ -20,7 +20,7 @@
             <img class="img-2" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/icons-arrow-right.svg" />
           </div>
         </div>
-        <div class="text-wrapper-2">გულა</div>
+        <a class="text-wrapper-2" href="../templates/honey.html">გულა</a>
         <div class="overlap-2">
           <div class="rectangle-2"></div>
           <div class="ellipse" id="price-min-handle"></div>
@@ -46,7 +46,7 @@
         </p>
         <div class="overlap-5">
           <img class="group" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/group-246.png" />
-          <div class="text-wrapper-7">კონტაქტი:</div>
+          <a class="text-wrapper-7 " href="../templates/aboutus.html">კონტაქტი:</div>
           <div class="text-wrapper-8"> ქ.თბილისი, გოგებაშვილის ქ.28.</div>
           <img class="group-2" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/group-234.png" />
           <div class="text-wrapper-9">511 123 000</div>
@@ -77,7 +77,7 @@
           <div class="overlap-group-2">
             <div class="text-wrapper-21">ფილტრები</div>
             <div class="apple filter-item" data-category="fruits"><img class="apple-2" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/apple.png" /></div>
-            <div class="text-wrapper-22 filter-item" data-category="fruits">ხილი და კენკრა</div>
+            <a class="text-wrapper-22 filter-item" href="../templates/fruitcategory.html"  data-category="fruits">ხილი და კენკრა</a>
             <div class="potato filter-item" data-category="vegetables">
               <img class="potato-2" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/potato.png" />
             </div>
@@ -354,15 +354,15 @@
           <div class="overlap-26">
             <div class="overlap-27">
               <div class="rectangle-5"></div>
-              <div class="text-wrapper-50">VilleGo</div>
-              <div class="text-wrapper-51">ბლოგი</div>
-              <div class="text-wrapper-52">ფერმერები</div>
-              <div class="text-wrapper-53">ჩვენს შესახებ</div>
-              <div class="text-wrapper-54">კონტაქტი</div>
-              <div class="rectangle-6"></div>
+              <a class="text-wrapper-50" href="../../index.html">VilleGo</a>
+              <a class="text-wrapper-51" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-52" href="../templates/farmers.html">ფერმერები</a>
+              <a class="text-wrapper-53" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-54" href="../templates/aboutus.html">კონტაქტი</a>
+              <a class="rectangle-6"></div>
               <img class="vector-23" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/vector-16.svg" />
               <div class="text-wrapper-55">ძებნა</div>
-              <div class="text-wrapper-56">რუკა</div>
+              <a class="text-wrapper-56" href="../templates/completemap.html">რუკა</a>
               <img class="image" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/-------.png" />
               <img class="vector-24" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/vector-22.svg" />
               <img class="vector-25" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/vector-30.svg" />
@@ -415,15 +415,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/profile.png" />
-            <div class="text-wrapper-58">დახმარება</div>
-            <div class="text-wrapper-59">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-60">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-61">ინფორმაცია</div>
-            <div class="text-wrapper-62">გაყიდვის პირობები</div>
-            <div class="text-wrapper-63">წესები და პირობები</div>
-            <div class="text-wrapper-64">მომხმარებელი</div>
-            <div class="text-wrapper-65">რეგისტრაცია</div>
-            <div class="text-wrapper-66">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-58" href="../templates/help.html">დახმარება</a>
+            <a class="text-wrapper-59" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-60" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-61" href="../templates/">ინფორმაცია</a>
+            <a class="text-wrapper-62" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-63" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-64" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-65" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-66" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-57">VilleGo</span>
               <span class="text-wrapper-67">&nbsp;</span>
@@ -452,12 +452,12 @@
             </p>
             <div class="text-wrapper-76">საქართველო</div>
           </div>
-          <div class="text-wrapper-77">დახმარების გვერდი</div>
-          <div class="text-wrapper-78">ჩვენს შესახებ</div>
-          <div class="text-wrapper-79">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-80">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-81">ფავორიტები</div>
-          <div class="text-wrapper-82">კალათა</div>
+          <a class="text-wrapper-77" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-78" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+          <a class="text-wrapper-79" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-80" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-81" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-82" href="../templates/cart.html">კალათა</a>
           <img class="vector-28" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/vector-34.svg" />
           <img class="d" src="https://c.animaapp.com/mfia09i7TtmkvZ/img/d.svg" />
           <div class="group-12">
