--- a/assets/templates/farmers.html
+++ b/assets/templates/farmers.html
@@ -468,23 +468,29 @@
           <div class="overlap-2">
             <div class="overlap-3">
               <div class="rectangle-101"></div>
-              <div class="text-wrapper-115">VilleGo</div>
-              <div class="text-wrapper-116">ბლოგი</div>
-              <div class="text-wrapper-117">ფერმერები</div>
-              <div class="text-wrapper-118">ჩვენს შესახებ</div>
-              <div class="text-wrapper-119">კონტაქტი</div>
-              <div class="rectangle-102"></div>
+              <a class="text-wrapper-115" href="../../index.html">VilleGo</a>
+              <a class="text-wrapper-116" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-117" href="../templates/farmers.html">ფერმერები</a>
+              <a class="text-wrapper-118" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-119" href="../templates/aboutus.html">კონტაქტი</a>
+              <a class="rectangle-102"></div>
               <img class="vector-18" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-13.svg" />
               <div class="text-wrapper-120">ძებნა</div>
-              <div class="text-wrapper-121">რუკა</div>
-              <img class="image" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/-------.png" />
-              <img class="vector-19" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-14.svg" />
-              <img class="vector-20" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-12.svg" />
-              <img class="vector-21" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-11.svg" />
-              <img class="plus-circle" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/plus-circle---1441-.svg" />
-              <img class="ellipse" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/ellipse-3981.png" />
+              <a class="text-wrapper-121" href="../templates/completemap.html">რუკა</a>
+              <a class="image" href="../templates/mapfilters.html">
+              <img  src="https://c.animaapp.com/mfi6yug0oAVKRR/img/-------.png" /></a>
+              <a class="vector-19" href="../templates/favorites.html">
+              <img src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-14.svg" /></a>
+              <a class="vector-20" href="../templates/cart.html">
+              <img src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-12.svg" /></a>
+              <a class="vector-20" href="../templates/messages.html">
+              <img src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-11.svg" /></a>
+              <a class="vector-21" href="../templates/addstatement.html">
+              <img c src="https://c.animaapp.com/mfi6yug0oAVKRR/img/plus-circle---1441-.svg" /></a>
+              <a class="ellipse" href="../templates/personalpage.html">
+              <img src="https://c.animaapp.com/mfi6yug0oAVKRR/img/ellipse-3981.png" /></a>
             </div>
-            <img class="group-4" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/group-1859.png" />
+            <img class="group-4" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/group-1859.png" /></a>
           </div>
         </div>
         <div class="v-2">
@@ -529,15 +535,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/profile.png" />
-            <div class="text-wrapper-123">დახმარება</div>
-            <div class="text-wrapper-124">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-125">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-126">ინფორმაცია</div>
-            <div class="text-wrapper-127">გაყიდვის პირობები</div>
-            <div class="text-wrapper-128">წესები და პირობები</div>
-            <div class="text-wrapper-129">მომხმარებელი</div>
-            <div class="text-wrapper-130">რეგისტრაცია</div>
-            <div class="text-wrapper-131">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-123" href="../templates/help.html">დახმარება</a>
+            <a class="text-wrapper-124" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-125" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-126" href="../templates/">ინფორმაცია<a>
+            <a class="text-wrapper-127" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-128" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-129" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-130" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-131" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="p">
               <span class="text-wrapper-122">VilleGo</span>
               <span class="text-wrapper-132">&nbsp;</span>
@@ -566,12 +572,12 @@
             </p>
             <div class="text-wrapper-141">საქართველო</div>
           </div>
-          <div class="text-wrapper-142">დახმარების გვერდი</div>
-          <div class="text-wrapper-143">ჩვენს შესახებ</div>
-          <div class="text-wrapper-144">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-145">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-146">ფავორიტები</div>
-          <div class="text-wrapper-147">კალათა</div>
+          <a class="text-wrapper-142" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-143" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+          <a class="text-wrapper-144" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-145" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-146" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-147" href="../templates/cart.html">კალათა<av>
           <img class="vector-23" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/vector-8.svg" />
           <img class="d" src="https://c.animaapp.com/mfi6yug0oAVKRR/img/d.svg" />
           <div class="img-wrapper">
