--- a/assets/templates/favorites.html
+++ b/assets/templates/favorites.html
@@ -77,15 +77,15 @@
               <div class="overlap-5">
                 <div class="overlap-6">
                   <div class="rectangle"></div>
-                  <div class="text-wrapper-16">VilleGo</div>
-                  <div class="text-wrapper-17" onclick="navigateTo('blog')">ბლოგი</div>
-                  <div class="text-wrapper-18" onclick="navigateTo('farmers')">ფერმერები</div>
-                  <div class="text-wrapper-19" onclick="navigateTo('about')">ჩვენს შესახებ</div>
-                  <div class="text-wrapper-20" onclick="navigateTo('contact')">კონტაქტი</div>
-                  <div class="rectangle-2"></div>
+                  <a class="text-wrapper-16" href="../../index.html">VilleGo</div>
+                  <a class="text-wrapper-17" onclick="navigateTo('blog')" href="../templates/blog.html">ბლოგი</div>
+                  <a class="text-wrapper-18" onclick="navigateTo('farmers')" href="../templates/farmers.html">ფერმერები</div>
+                  <a class="text-wrapper-19" onclick="navigateTo('about')" href="../templates/aboutus.html">ჩვენს შესახებ</div>
+                  <a class="text-wrapper-20" onclick="navigateTo('contact')" href="../templates/aboutus.html">კონტაქტი</div>
+                  <a class="rectangle-2"></div>
                   <img class="vector-17" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/vector-29.svg" />
                   <div class="text-wrapper-21">ძებნა</div>
-                  <div class="text-wrapper-22" onclick="navigateTo('map')">რუკა</div>
+                  <a class="text-wrapper-22" onclick="navigateTo('map')" href="../templates/completemap.html">რუკა</div>
                   <img class="image" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/-------.png" />
                   <img class="vector-18" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/vector-39.svg" />
                   <img class="vector-19" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/vector-30.svg" />
@@ -302,15 +302,15 @@
               </div>
             </div>
             <img class="profile-2" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/profile-1.png" />
-            <div class="text-wrapper-51" onclick="navigateTo('help')">დახმარება</div>
-            <div class="text-wrapper-52" onclick="navigateTo('faq')">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-53" onclick="navigateTo('feedback')">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-54" onclick="navigateTo('info')">ინფორმაცია</div>
-            <div class="text-wrapper-55" onclick="navigateTo('sales-terms')">გაყიდვის პირობები</div>
-            <div class="text-wrapper-56" onclick="navigateTo('terms')">წესები და პირობები</div>
-            <div class="text-wrapper-57" onclick="navigateTo('user')">მომხმარებელი</div>
-            <div class="text-wrapper-58" onclick="navigateTo('register')">რეგისტრაცია</div>
-            <div class="text-wrapper-59" onclick="navigateTo('user-page')">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-51" href="../templates/help.html"  onclick="navigateTo('help')">დახმარება</a>
+            <a class="text-wrapper-52" href="../templates/"  onclick="navigateTo('faq')">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-53" href="../templates/"   onclick="navigateTo('feedback')">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-54" href="../templates/"  onclick="navigateTo('info')">ინფორმაცია</a>
+            <a class="text-wrapper-55" href="../templates/"  onclick="navigateTo('sales-terms')">გაყიდვის პირობები</a>
+            <a class="text-wrapper-56" href="../templates/"  onclick="navigateTo('terms')">წესები და პირობები</a>
+            <a class="text-wrapper-57" href="../templates/personalpage.html"  onclick="navigateTo('user')">მომხმარებელი</a>
+            <a class="text-wrapper-58" href="../templates/signup.html"  onclick="navigateTo('register')">რეგისტრაცია</a>
+            <a class="text-wrapper-59" href="../templates/personalpage.html"   onclick="navigateTo('user-page')">მომხმარებლის გვერდი</a>
             <p class="p">
               <span class="text-wrapper-50">VilleGo</span>
               <span class="text-wrapper-60">&nbsp;</span>
@@ -339,12 +339,12 @@
             </p>
             <div class="text-wrapper-69">საქართველო</div>
           </div>
-          <div class="text-wrapper-70" onclick="navigateTo('help-page')">დახმარების გვერდი</div>
-          <div class="text-wrapper-71" onclick="navigateTo('about-us')">ჩვენს შესახებ</div>
-          <div class="text-wrapper-72" onclick="navigateTo('return-policy')">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-73" onclick="navigateTo('privacy-policy')">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-74" onclick="navigateTo('favorites')">ფავორიტები</div>
-          <div class="text-wrapper-75" onclick="navigateTo('cart')">კალათა</div>
+          <a class="text-wrapper-70" href="../templates/help.html" onclick="navigateTo('help-page')">დახმარების გვერდი</a>
+          <a class="text-wrapper-71"  href="../templates/aboutus.html"onclick="navigateTo('about-us')">ჩვენს შესახებ</a>
+          <a class="text-wrapper-72"  href="../templates/"onclick="navigateTo('return-policy')">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-73"  href="../templates/"onclick="navigateTo('privacy-policy')">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-74"  href="../templates/favorites.html"onclick="navigateTo('favorites')">ფავორიტები</a>
+          <a class="text-wrapper-75" href="../templates/cart.html" onclick="navigateTo('cart')">კალათა<a>
           <img class="vector-28" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/vector-24.svg" />
           <img class="d" src="https://c.animaapp.com/mfi5ok5o1KL5am/img/d.svg" />
           <div class="group-14">
